# Emulator

./: .gitignore  Makefile
Emulator/: CMakeLists.txt
Emulator/Emulator/: CMakeLists.txt
Emulator/Emulator/include/: commands.hpp  emulator.hpp
Emulator/Emulator/src/: a.out  emulator.cpp
Emulator/Emulator/test/: test.cpp
Emulator/Parser/: CMakeLists.txt
Emulator/Parser/src/: a.out  parser.cpp
Emulator/Parser/test/: test.cpp
Emulator/Preprocessor/: CMakeLists.txt
Emulator/Preprocessor/src/: a.out  preprocessor.cpp
Emulator/Preprocessor/test/: test.cpp
Emulator/Runner/: Factorial  Fib  testDebug
Emulator/Runner/include/: runner.hpp  runner.hpp.in
Emulator/Runner/src/: main.cpp
Emulator/Stack/: CMakeLists.txt
Emulator/Stack/include/: stack.h  stack.hpp  stack.hpp.gch
Emulator/Stack/src/: stack.cpp
Emulator/Stack/test/: test.cpp
Emulator_build/: Runner  input
Emulator_build/Emulator/: EmulatorTest  EmulatorTest[1]_include.cmake  EmulatorTest[1]_tests.cmake
Emulator_build/Parser/: ParserTest  ParserTest[1]_include.cmake  ParserTest[1]_tests.cmake
Emulator_build/Preprocessor/: PreprocessorTest  PreprocessorTest[1]_include.cmake  PreprocessorTest[1]_tests.cmake
Emulator_build/Stack/: StackTest  StackTest[1]_include.cmake  StackTest[1]_tests.cmake
